--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=80
     
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://60.205.182.88:3306/xiangnong
+spring.datasource.url=jdbc:mysql://60.205.182.88:3306/xiangnong?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.typeAliasesPackage=com.xiangnong.xnservice.entity
+mybatis.mapperLocations=classpath:mybatis/*.xml
